# B.Sc.thesis

./: CMakeLists.txt  README.md  main.cpp
data/: DD_label.label  ENZYMES  MUTAG  MUTAG_10  MUTAG_15  MUTAG__  MUTAG_label  NCI1  NCI109  README.md
include/: config.hpp  gspan.h  testability.hpp
src/: graph.cpp  gspan.cpp
